@@ -1,7 +1,7 @@
 package org.schoellerfamily.geoservice.controller;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 import org.apache.commons.lang3.StringUtils;
 import org.schoellerfamily.geoservice.model.GeoServiceItem;
@@ -15,13 +15,12 @@ import org.springframework.web.bind.annotation.RestController;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
+
+
 /**
- * Controller for RESTful web service to request geocoding for a historical
- * place name. The response will contain an equivalent modern place name, which
- * may or may not be the same as the historical place name. If found, the
- * response will also contain a geocoding result from Google's geocoding APIs.
+ * Handles requests for geo code entry.
  *
- * @author Dick Schoeller
+ * @author Richard Schoeller
  */
 @RestController
 @RequiredArgsConstructor
@@ -33,9 +32,11 @@ public class GeoCodeEntryController {
     private final GeoCode gcc;
 
     /**
-     * @param name the historical name of the place
-     * @param modernName the modern searchable name of the place
-     * @return a search result
+     * Finds a value.
+     *
+     * @param name the name to use
+     * @param modernName the modern name to use
+     * @return the resulting geo service item
      */
     @GetMapping("/geocode")
     public final GeoServiceItem find(
@@ -48,27 +49,16 @@ public class GeoCodeEntryController {
         } else {
             log.debug("Find location: \"{}\", \"{}\"", name, modernName);
         }
-        String findName;
-        try {
-            findName = URLDecoder.decode(name, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            findName = name;
-        }
-        String findModernName;
+        final String findName = URLDecoder.decode(name, StandardCharsets.UTF_8);
         if (StringUtils.isEmpty(modernName)) {
             final GeoCodeItem find = gcc.find(findName);
             final GeocodeResultBuilder builder = new GeocodeResultBuilder();
             return builder.toGeoServiceItem(find);
-        } else {
-            try {
-                findModernName = URLDecoder.decode(modernName, "UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                findModernName = modernName;
-            }
-            final GeoCodeItem find = gcc.find(findName, findModernName);
-            final GeocodeResultBuilder builder = new GeocodeResultBuilder();
-            return builder.toGeoServiceItem(find);
         }
+        final String findModernName = URLDecoder.decode(modernName, StandardCharsets.UTF_8);
+        final GeoCodeItem find = gcc.find(findName, findModernName);
+        final GeocodeResultBuilder builder = new GeocodeResultBuilder();
+        return builder.toGeoServiceItem(find);
 
     }
 }
